Fixing alignment for small phone screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,6 @@ body {
 
 .iconbox {
     vertical-align: top;
-    /*height: 20%;*/
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -172,17 +171,13 @@ body {
 .captionbox {
     vertical-align: top;
     width: 20%;
-    /*height: 30%;*/
     padding-inline: 1%;
-    /*min-height: 550px;*/
     margin-inline: 0.5%;
     margin-bottom: 1.3%;
 }
 
 .captionbox p {
     padding: 0px;
-    text-align: justify;
-    text-align-last: center;
     margin-top: 8px;
     width: 90%;
     margin-left: auto;
